--- a/module/media/_media.scss
+++ b/module/media/_media.scss
@@ -14,7 +14,6 @@
 @mixin query($conditions...) {
     $expression: _processing((), 1, 1, $conditions...);
     $expression: _post-processing($expression);
-    @debug $expression;
     @media #{_building($expression)} {
         @content;
     }
@@ -44,17 +43,17 @@
 @function _processing($expressions, $expCounter: 1, $condCounter: 1, $_conditions_...) {
     $_condition: "";
 
-    @if (list.length($_conditions_) < 1) {
+    @if (List.length($_conditions_) < 1) {
         @return $expressions;
     }
 
-    $_condition: list.nth($_conditions_, 1);
+    $_condition: List.nth($_conditions_, 1);
 
     @if ($_condition == null or $_condition == () or $_condition == '') {
         @return $expressions;
     }
 
-    $_conditions_: lst.slice($_conditions_);
+    $_conditions_: List.slice($_conditions_);
     @return if(
         meta.type-of($_condition) == 'list',
         _processing(map.deep-merge($expressions,
@@ -70,18 +69,18 @@
 
 
 @function _building($queryList, $queryChunk: ()) {
-    @if ($queryChunk == () and list.length($queryList) > 0) {
-        $queryChunk: list.nth($queryList, 1);
+    @if ($queryChunk == () and List.length($queryList) > 0) {
+        $queryChunk: List.nth($queryList, 1);
     }
 
     @if (list.length($queryChunk) < 2) {
-        @return if(list.length($queryList) > 1,
-          #{list.nth($queryChunk, 1)} + ' , ' + _building(List.slice($queryList)),
-          #{list.nth($queryChunk, 1)}
+        @return if(List.length($queryList) > 1,
+          #{List.nth($queryChunk, 1)} + ' , ' + _building(List.slice($queryList)),
+          #{List.nth($queryChunk, 1)}
         )
     }
 
-    @return #{list.nth($queryChunk, 1)} + ' and ' + _building($queryList, List.slice($queryChunk));
+    @return #{List.nth($queryChunk, 1)} + ' and ' + _building($queryList, List.slice($queryChunk));
 }
 
 @function _parse-expressions($_condition_, $expCounter, $condCounter, $expression-map) {
@@ -137,21 +136,26 @@
 @function _parse-conditions($condition, $featureMap) {
     $alias: map.get($featureMap, 'alias');
     $condition: str.replace($condition, ' ', '');
-    $condition-list: str.split($condition, $alias);
+    $conditionList: str.split($condition, $alias);
 
-    $condition-map: ();
-    @for $i from 1 through list.length($condition-list) {
-        @if list.nth($condition-list, $i) != '' {
+    $conditionMap: ();
+    @for $i from 1 through List.length($conditionList) {
+        @if List.nth($conditionList, $i) != '' {
             @if ($i == 1) {
-                $condition-map: map.deep-merge($condition-map, ('left': list.nth($condition-list, $i)))
+                $conditionMap: map.deep-merge($conditionMap,
+                    ('left': List.nth($conditionList, $i))
+                )
             }
+
             @if ($i == 2) {
-                $condition-map: map.deep-merge($condition-map, ('right': list.nth($condition-list, $i)))
+                $conditionMap: map.deep-merge($conditionMap,
+                     ('right': List.nth($conditionList, $i))
+                )
             }
         }
     }
 
-    @return $condition-map;
+    @return $conditionMap;
 }
 
 
