--- a/module/media/_media.scss
+++ b/module/media/_media.scss
@@ -10,6 +10,7 @@
 @use "../../vendor/core/string" as String;
 @use "../../vendor/core/list" as lst;
 @use "../../vendor/core/list" as List;
+@use "../../vendor/core/to";
 
 
 
@@ -103,6 +104,7 @@
     @if ($featureMap != null) {
         $featureName: map.get($featureMap, 'name');
         $featureType: map.get($featureMap, 'type');
+        $featureUnits: map.get($featureMap, 'units');
         $featurePoints: map.get($featureMap, 'points');
 
         $conditionMap: _parse-conditions($_condition_, $featureMap);
@@ -111,7 +113,7 @@
             $dimension: _get-dimension($operator, $context, $featureType);
 
             $value: String.trim(String.replace($condition, $operator, ''));
-            $value: _parse-value($value, $featureType, $featurePoints);
+            $value: _parse-value($value, $featureType, $featurePoints, $featureUnits);
 
             $expressions: map.deep-merge($expressions, (
               'features': ('#{$dimension}#{$featureName}': $value)
@@ -200,7 +202,7 @@
 }
 
 
-@function _parse-value($rawValue, $featureType, $featurePoints) {
+@function _parse-value($rawValue, $featureType, $featurePoints, $featureUnits) {
     $value: '';
 
     @if not is.empty($featurePoints) {
@@ -215,7 +217,7 @@
         );
     }
 
-    @return if($featureType == 'range', _to-number($value), $value);
+    @return if($featureType == 'range', to.number($value, true, $featureUnits), $value);
 }
 
 @function _to-number($value) {
@@ -263,6 +265,8 @@
             $digits: $digits * 10;
             $result: $result + math.div(map.get($numbers, $character), $digits);
         }
+
+        @debug $result;
     }
 
     @return if($minus, -$result, $result);
