--- a/module/media/_settings.scss
+++ b/module/media/_settings.scss
@@ -16,6 +16,13 @@ $__media_config__: (
         'range': ('<=', '<', '>=', '>', '==', '='),
         'discrete': (':')
     ),
+    'units': (
+        'def': (
+            units.$constNameDistance: 'px',
+            units.$constNameAngle: 'deg',
+            units.$constNameResolution: 'dpi',
+        ),
+    ),
     'features': (
         '@w': (
             'name': 'width',
